crates/djls-project/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_absoluteurl.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "misago.core.templatetags.misago_absoluteurl::tag::absoluteurl":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: url_or_name
          requirement: required
          kind: Variable
        - name: args
          requirement: optional
          kind: VarArgs
    as_var: strip
filter_arities: {}
block_specs: {}
