crates/djls-project/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_batch.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::batch":
    kind: filter
    has_doc: false
  "filter::batchnonefilled":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "misago.core.templatetags.misago_batch::filter::batch": required_argument
  "misago.core.templatetags.misago_batch::filter::batchnonefilled": required_argument
block_specs: {}
