crates/djls-project/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_capture.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules: {}
filter_arities: {}
block_specs:
  "misago.core.templatetags.misago_capture::tag::capture":
    body_analysis_evidence: not_detected
    end_tag: endcapture
    intermediates: []
