crates/djls-project/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_pagetitle.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "misago.core.templatetags.misago_pagetitle::tag::pagetitle":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: title
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
filter_arities: {}
block_specs: {}
