crates/djls-project/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_shorthands.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::iffalse":
    kind: filter
    has_doc: false
  "filter::iftrue":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "misago.core.templatetags.misago_shorthands::filter::iffalse": required_argument
  "misago.core.templatetags.misago_shorthands::filter::iftrue": required_argument
block_specs: {}
