crates/djls-project/tests/snapshots/corpus__repos__misago__misago__core__templatetags__misago_stringutils.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::isdescriptionshort":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "misago.core.templatetags.misago_stringutils::filter::isdescriptionshort": no_argument
block_specs: {}
